--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -4,6 +4,48 @@
   padding-left: 5px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background: rgb(22, 22, 22);
-  color: #fafafa;
+  /* background: rgb(22, 22, 22); */
+}
+
+.cuadro {
+  border-radius: 40px;
+  -webkit-border-radius: 40px;
+  -moz-border-radius: 40px;
+  -ms-border-radius: 40px;
+  -o-border-radius: 40px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.ventana {
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+  background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+}
+
+.visualizadorPuerto {
+  background-color: #fc3939;
+  color: #ffffff;
+}
+
+.configuracionPuerto {
+  background-color: #a347ff;
+  color: #ffffff;
+}
+
+.dialogoPuerto {
+  background-color: #979797;
+  color: #ffffff;
+}
+
+.enviaComandos {
+  background-color: #a347ff;
+  color: #ffffff;
 }
