--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -119,7 +119,7 @@ body {
 .neuBtn2:active {
   background: rgb(255, 123, 0);
   box-shadow: inset 5px 5px 15px rgba(0, 0, 0, 0.1),
-    inset -5px -6px 15px rgba(255, 255, 255, 0.9);
+    inset -5px -6px 15px rgba(255, 255, 255, 0.3);
   border: none;
   border-radius: 20px;
   -webkit-border-radius: 20px;
@@ -278,11 +278,31 @@ input {
 .btnConectar:active {
   border: none;
   outline: none;
-  background: #ffffff;
-  box-shadow: inset 20px 20px 60px #d9d9d9, inset -20px -20px 60px #ffffff;
+  background: rgb(255, 123, 0);
+  box-shadow: inset 5px 5px 15px rgba(0, 0, 0, 0.1),
+    inset -5px -6px 15px rgba(255, 255, 255, 0.3);
+  border: none;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
 }
 
 .btnConectar:focus {
+  outline: none;
+}
+
+.btnActualizar {
+  border: none;
+  border-radius: 50%;
+  margin-left: 1rem;
+  height: 2rem;
+  width: 2rem;
+  padding: 0;
+}
+.btnActualizar:focus {
+  border: none;
   outline: none;
 }
 
